Mon Oct 18 10:27:49 2005 by regrain
   * Minor coding-style clean up
   * Replace the ContentEntry and its derived classes (BinEntry and ValEntry)
     by the DataEntry. This unique entry considers all datas like binary datas.
     Some methods are added to interpret - at fly - the binary datas.
     Due to this important change, some methods of the DocEntrySet, concerning
     the BinEntry and ValEntry classes, are erased ; and new methods for the
     DataEntry class are created.
     Some methods to set the ValEntry or the BinEntry are renamed to
     correspond to the new DataEntry, like for example :
      - SetValEntry -> SetEntryString
      - SetBinEntry -> SetEntryBinArea
     This change will remove all useless creation of the string when working
     directly on values.

Thu Aug 25 16:59:49 2005 by jpr
   gdcmBinEntry.cxx
   Now Print displays the BinEntry Content (if it's printable, and loaded)
   Usefull for a lot od Implicit VR 'Bin'Entry (if we knew there VR, they wouldn't
   be Bin ...)
   Appreciate the difference having a look at PrintFile result for
   gdcmData/SIEMENS_MAGNETOM-12-MONO2-FileSeq0.dcm.

Thu Aug 25 16:55:47 2005 by jpr
   gdcmUtil.cxx
   Add methods to check the 'printability' of a bin area

Thu Aug 25 15:45:40 2005  by jpr
  gdcmBinEntry.cxx 
  According to Mathieu's suggestion, Print now display FL BinEntries in a human
  readable form

Thu Aug 25 15:12:43 2005 by jpr
   gdcmDocEntry.cxx
   According to Mathieu's suggestion, *all* the elements 0x000
   are now named 'Group Length' (even if they belong to a Shadow Group')

Wed Aug 24 14:09:13 2005 by jpr
  gdcmDocEntry.cxx,h, gdcmDocEntrySet.cxx,h
  Removal of QD patch for Private Sequence + Immplicit VR.
   Add a clean solution (Backtracking if an Item Starter is found
    out of any SQItem)

Tue Aug 23 14:57:49 2005 by jpr
   gdcmDocument.cxx
   Brutal patch, waiting till we find a clever way to guess
   if a doc entry is a Sequence,
        - when it's odd number